<resources>
    <string name="app_name" translatable="false">KcalTracker</string>
    <string name="genericError">Error</string>
    <string name="login">Login</string>
    <string name="create_account">Sign in</string>
    <string name="no_account">Continue without account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="repassword">Retype your password</string>
    <string name="createAccount_Text">When you create your KcalTracker account, you can keep track of your meal and how many calories you\'re consuming.</string>
    <string name="goBack">Back</string>
    <string name="mismatchPassword">The passwords are different</string>
    <string name="shortPassword">Password must be at leas 8 characters</string>
    <string name="validEmail">Invalid Email!</string>
    <string name="usernameUnavailable">Username not available</string>
    <string name="emailAlreadyRegistered">Email already registered</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="sendPasswordRecoveryToken">Send Token</string>
    <string name="recoverPasswordText">Type the email associated with your KcalTracker account. A token will sent to your mail, allowing you to change your password.</string>
    <string name="havePasswordToken">I have Token</string>
    <string name="askPasswordRecoveryToken">Request Token</string>
    <string name="token">Token</string>
    <string name="sendTokenText">After getting token, type it here with the new password</string>
    <string name="tokenSent">Token sent.</string>
    <string name="successChangePassword">Password changed.</string>
    <string name="errorChangingPassword">Error in password change.</string>
    <string name="userPhoto">User photo.</string>
    <string name="add_foodItem">Add food item</string>
    <string name="edit_FoodItem">Edit food item</string>
    <string name="expand">expand</string>
    <string name="app_logo">Illustration of an lowpoly apple in flames</string>
    <string name="password_recovery">Recover password</string>
    <string name="insert_food">Add food item</string>
    <string name="food">Food:</string>
    <string name="grams">Weight (g):</string>
    <string name="insert_grams">Insert weight</string>
    <string name="meal">Meal:</string>
    <string name="breakfast">Breakfast</string>
    <string name="morning_tea">Morning tea</string>
    <string name="lunch">Lunch</string>
    <string name="afternoon_tea">Afternoon tea</string>
    <string name="dinner">Dinner</string>
    <string name="supper">Supper</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="wrong_UserPassword">Wrong username or password</string>
    <string name="missingFields">Missing fields</string>
    <string name="calories">Calories</string>
    <string name="edit_goal">Edit goal</string>
    <string name="goal">Goal</string>
    <string name="setGoal">Set goal</string>
    <string name="currentGoal">Current goal:</string>
    <string name="set">Set</string>
    <string name="newGoal">New goal</string>
</resources>