<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="350dp">

        <com.example.kcaltracker.FoodAutoSuggest
            android:id="@+id/EditGoal_Input_Goal"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/newGoal"
            android:textColor="?android:attr/textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditGoal_Text_CurrentGoal"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/EditGoal_Text_CurrentGoal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:text="@string/currentGoal"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/EditGoal_Button_Close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:clickable="true"
            android:contentDescription="@string/close"
            android:rotation="45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/add_icon"
            app:tint="?android:attr/textColorPrimary"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/EditGoal_Button_Set"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:contentDescription="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditGoal_Input_Goal"
            app:srcCompat="@drawable/button"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/EditGoal_Text_Set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoSizeTextType="none"
            android:autoText="false"
            android:clickable="false"
            android:freezesText="false"
            android:text="@string/setGoal"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textIsSelectable="false"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/EditGoal_Button_Set"
            app:layout_constraintEnd_toEndOf="@+id/EditGoal_Button_Set"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/EditGoal_Button_Set"
            app:layout_constraintTop_toTopOf="@+id/EditGoal_Button_Set"
            tools:ignore="Deprecated,TextViewEdits" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>