<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:outlineSpotShadowColor="#FF0000"
    android:rotationX="0"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="-50dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_logo"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/AppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_background" />

    <ImageView
        android:id="@+id/AppName"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kcalltracker_noglow"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppName"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:ignore="VisualLintTextFieldSize" />

    <ImageView
        android:id="@+id/Button_Login"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:drawingCacheQuality="low"
        android:foregroundTint="#00000000"
        android:importantForAccessibility="no"
        android:onClick="login"
        app:layout_constraintEnd_toStartOf="@+id/CreateAccount_Button_CreateAccount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:srcCompat="@drawable/button"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Main_Text_Login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoSizeTextType="none"
        android:autoText="false"
        android:clickable="false"
        android:freezesText="false"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/Button_Login"
        app:layout_constraintEnd_toEndOf="@+id/Button_Login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Button_Login"
        app:layout_constraintTop_toTopOf="@+id/Button_Login"
        tools:ignore="Deprecated,TextViewEdits" />

    <ImageView
        android:id="@+id/CreateAccount_Button_CreateAccount"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/login"
        android:contextClickable="true"
        android:onClick="onCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Button_Login"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:srcCompat="@drawable/button"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Text_CreateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoSizeTextType="none"
        android:autoText="false"
        android:freezesText="false"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/CreateAccount_Button_CreateAccount"
        app:layout_constraintEnd_toEndOf="@+id/CreateAccount_Button_CreateAccount"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/CreateAccount_Button_CreateAccount"
        app:layout_constraintTop_toTopOf="@+id/CreateAccount_Button_CreateAccount"
        tools:ignore="Deprecated,TextViewEdits" />

    <TextView
        android:id="@+id/main_noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contextClickable="false"
        android:onClick="recoverPassword"
        android:text="@string/no_account"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TouchTargetSizeCheck"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/main_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contextClickable="false"
        android:onClick="onRecoverPassword"
        android:text="@string/forgotPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>